gitops/ingress/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bgp-canary
  namespace: default
spec:
  parentRefs:
    - name: homelab
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bgp-canary
          port: 80
